--- a/_includes/sigfooter.html
+++ b/_includes/sigfooter.html
@@ -1,2 +1,2 @@
 <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="/js/sig.js"></script>
+<script src="//github.sharedit.com/assets/js/sig.js"></script>
