--- a/assets/css/4-pages/markdown.sass
+++ b/assets/css/4-pages/markdown.sass
@@ -1,3 +1,45 @@
 .content-wrapper
-  h1
-  color: blue
+  position: relative
+  background-color: white
+  padding: 50px 30px
+  margin: -10px
+  width: 100%
+  height: 100%
+  .content
+    background-color: white
+    position: absolute
+    margin-left: -50%
+    top: 10
+    left: 48%
+    padding: 0 10%
+    h2
+      padding-left: 1%
+    h3
+      padding-left: 2%
+    h4
+      padding-left: 3%
+    h5
+      padding-left: 5%
+    p
+      padding-left: 6%
+    pre
+      font-family: "Courier 10 Pitch", Courier, monospace
+      font-size: 95%
+      line-height: 140%
+      white-space: pre
+      white-space: pre-wrap
+      white-space: -moz-pre-wrap
+      white-space: -o-pre-wrap
+      padding-left: 6%
+      code
+        font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace
+        font-size: 95%
+        line-height: 140%
+        white-space: pre
+        white-space: pre-wrap
+        white-space: -moz-pre-wrap
+        white-space: -o-pre-wrap
+        background: rgb(222, 245, 225)
+        display: block
+        padding: 0.5em 1em
+        border: 1px solid #bebab0
