--- a/assets/css/4-pages/_example-page-home.sass
+++ b/assets/css/4-pages/_example-page-home.sass
@@ -12,24 +12,21 @@ div.template
   div.page-home
     text-align: center
 
+
+
     section
-      max-width: 1000px
-      margin: 50px auto
-      padding: 40px
+      margin: 10px auto
+      padding: 1rem 0px
       position: relative
       background-color: rgba(255,255,255,0.7)
       box-shadow: 0px 2px 10px rgba(0,0,0,0.1)
 
-      &:first-child
-        background:
-          // image: url(../img/tools.png)
-          position: center
-
       h1
         font-weight: 700
         line-height: 1
-        margin: 20px 0
         letter-spacing: 1px
+        padding: 20px
+
 
     img
       max-width: 100%
