Fix CSS on multiple pages

--- a/assets/css/4-pages/_page-home.sass
+++ b/assets/css/4-pages/_page-home.sass
@@ -1,6 +1,17 @@
 $full-background: #349DD6
 $shadow: #666
 $home-content: #666
+nav
+  postion: fixed
+  top: 0
+  left: 0
+  padding: 1rem
+  background-color: rgba(0,0,0,.02)
+  margin: 1rem
+  a
+    i
+      color: $shadow
+      text-decoration: none
 section.full-bleed
   background-image: url('/assets/img/bg.png')
   height: 100vh
