--- a/assets/css/4-pages/_example-page-home.sass
+++ b/assets/css/4-pages/_example-page-home.sass
@@ -1,31 +1,32 @@
+html
+  font-size: 16px
 body.default
   margin: 10px
-  background-color: $silver
+  background-color: white
   overflow-x: hidden
 
   ul
-    list-style-type: none
+    // list-style-type: none
     -webkit-padding-start: 0px
 
 div.template
 
   div.page-home
-    text-align: center
-
-
 
     section
-      margin: 10px auto
-      padding: 1rem 0px
+      padding: 0 3rem
       position: relative
-      background-color: rgba(255,255,255,0.7)
-      box-shadow: 0px 2px 10px rgba(0,0,0,0.1)
+      // background-color: rgba(255,255,255,0.7)
+
+      // box-shadow: 0px 2px 10px rgba(0,0,0,0.1)
 
       h1
         font-weight: 700
-        line-height: 1
-        letter-spacing: 1px
-        padding: 20px
+        margin: 4rem 0
+        padding: 0
+
+    ul
+      margin: 20px
 
 
     img
