--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -28,3 +28,4 @@
 @import '4-pages/example-page-home'
 @import '4-pages/_page-home.sass'
 @import '4-pages/markdown.sass'
+@import '4-pages/_sig_gen.sass'
