--- a/assets/css/4-pages/markdown.sass
+++ b/assets/css/4-pages/markdown.sass
@@ -12,6 +12,11 @@
     top: 10
     left: 48%
     padding: 0 10%
+    #title
+      font-size: 5rem
+      margin-bottom: 2rem
+    h1
+      margin-bottom: 1rem
     h2
       padding-left: 1%
     h3
