--- a/assets/css/2-basics/_typography.sass
+++ b/assets/css/2-basics/_typography.sass
@@ -1,34 +1,34 @@
 //	Headings
-// 
+//
 // .gigantic, .huge, .large, .bigger, .big,
 // h1, h2, h3, h4, h5, h6
 //   color: white
 //   font-weight: bold
 
 .gigantic
-  font-size: 110px
+  font-size: 6.875rem
   line-height: 1.09
   letter-spacing: -2px
 
 .huge, h1
-  font-size: 68px
+  font-size: 4.25rem
   line-height: 1.05
   letter-spacing: -1px
 
 .large, h2
-  font-size: 42px
+  font-size: 2.624rem
   line-height: 1.14
 
 .bigger, h3
-  font-size: 26px
+  font-size: 1.625rem
   line-height: 1.38
 
 .big, h4
-  font-size: 22px
+  font-size: 1.375rem
   line-height: 1.38
 
 .small, small
-  font-size: 10px
+  font-size: 0.625rem
   line-height: 1.2
 
 
