--- a/assets/css/4-pages/markdown.sass
+++ b/assets/css/4-pages/markdown.sass
@@ -1,17 +1,17 @@
+html#htmlSelect
+  @media screen and (max-width: 600px)
+    font-size: 8px
 .content-wrapper
   position: relative
   background-color: white
-  padding: 50px 30px
-  margin: -10px
-  width: 100%
-  height: 100%
+  padding: 2rem 1rem
   .content
     background-color: white
     position: absolute
     margin-left: -50%
-    top: 10
-    left: 48%
-    padding: 0 10%
+    left: 50%
+    width: 90%
+    padding: 0 2rem
     #title
       font-size: 5rem
       margin-bottom: 2rem
