--- a/assets/css/4-pages/markdown.sass
+++ b/assets/css/4-pages/markdown.sass
@@ -7,11 +7,8 @@ html#htmlSelect
   padding: 2rem 1rem
   .content
     background-color: white
-    position: absolute
-    margin-left: -50%
-    left: 50%
-    width: 90%
-    padding: 0 2rem
+    margin: 0 auto
+    padding: 0 10%
     #title
       font-size: 5rem
       margin-bottom: 2rem
