--- a/assets/css/4-pages/markdown.sass
+++ b/assets/css/4-pages/markdown.sass
@@ -1,4 +1,8 @@
 html#htmlSelect
+  @media screen and (max-width: 1200px)
+    font-size: 12px
+  @media screen and (max-width: 1000px)
+    font-size: 8px
   @media screen and (max-width: 600px)
     font-size: 6px
 .content-wrapper
