--- a/assets/css/4-pages/markdown.sass
+++ b/assets/css/4-pages/markdown.sass
@@ -34,18 +34,15 @@ html#htmlSelect
       line-height: 140%
       white-space: pre
       white-space: pre-wrap
-      white-space: -moz-pre-wrap
-      white-space: -o-pre-wrap
+
       padding-left: 6%
+      background: rgb(222, 245, 225)
+      border: 1px solid #bebab0
+      margin-left: 6%
       code
         font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace
         font-size: 95%
         line-height: 140%
-        white-space: pre
-        white-space: pre-wrap
-        white-space: -moz-pre-wrap
-        white-space: -o-pre-wrap
-        background: rgb(222, 245, 225)
+        white-space: nowrap
         display: block
-        padding: 0.5em 1em
-        border: 1px solid #bebab0
+        padding: 2.5rem 0
