--- a/assets/css/4-pages/markdown.sass
+++ b/assets/css/4-pages/markdown.sass
@@ -28,21 +28,42 @@ html#htmlSelect
       padding-left: 5%
     p
       padding-left: 6%
-    pre
-      font-family: "Courier 10 Pitch", Courier, monospace
-      font-size: 95%
-      line-height: 140%
-      white-space: pre
-      white-space: pre-wrap
-
-      padding-left: 6%
-      background: rgb(222, 245, 225)
-      border: 1px solid #bebab0
-      margin-left: 6%
-      code
-        font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace
+    .smallCode
+      pre
+        font-family: "Courier 10 Pitch", Courier, monospace
         font-size: 95%
         line-height: 140%
-        white-space: nowrap
-        display: block
-        padding: 2.5rem 0
+        white-space: pre
+        white-space: pre-wrap
+
+        padding-left: 6%
+        background: rgb(222, 245, 225)
+        border: 1px solid #bebab0
+        margin-left: 6%
+        code
+          font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace
+          font-size: 95%
+          line-height: 140%
+          white-space: nowrap
+          display: block
+          padding: 2.5rem 0
+    .largeCode
+      pre
+        font-family: "Courier 10 Pitch", Courier, monospace
+        font-size: 95%
+        line-height: 140%
+        white-space: pre
+        white-space: pre-wrap
+        white-space: -moz-pre-wrap
+        white-space: -o-pre-wrap
+        padding-left: 6%
+        code
+          font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace
+          font-size: 95%
+          line-height: 140%
+          white-space: pre
+          white-space: pre-wrap
+          background: rgb(222, 245, 225)
+          display: block
+          padding: 0.5em 1em
+          border: 1px solid #bebab0
