--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -30,3 +30,4 @@
 @import '4-pages/_page-home.sass'
 @import '4-pages/markdown.sass'
 @import '4-pages/_sig_gen.sass'
+@import '4-pages/sharedit.sass'
