--- a/assets/css/4-pages/markdown.sass
+++ b/assets/css/4-pages/markdown.sass
@@ -28,6 +28,13 @@ html#htmlSelect
       padding-left: 5%
     p
       padding-left: 6%
+      img
+        width: 100%
+    ol
+      padding-left: 10%
+
+    .smallImg
+      width: 120%
     .smallCode
       pre
         font-family: "Courier 10 Pitch", Courier, monospace
